# ez-miner

./: README.md
miner/: CMakeLists.txt  btc_client.h  main.cpp  miner.cpp  miner.h  sha256.h  sha256_openssl.cpp  sha256_openssl.h  util.cpp
